--- a/my-react-task-list/src/styles/cardTask.css
+++ b/my-react-task-list/src/styles/cardTask.css
@@ -1,9 +1,47 @@
 .taskCard {
-  width: 25%;
-  margin: 0 auto;
-  padding: 2px;
+  width: 600px;
+  height: 220px;
+  margin: 30px auto;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #bae8c3;
+  box-shadow: 0px 0px 19px 0px #7c9c83;
   border-radius: 10px;
-  -webkit-box-shadow: 0px 0px 19px 0px rgba(123, 43, 227, 0.54);
-  -moz-box-shadow: 0px 0px 19px 0px rgba(123, 43, 227, 0.54);
-  box-shadow: 0px 0px 19px 0px rgba(123, 43, 227, 0.54);
+}
+
+.columna {
+  display: grid;
+  grid-template-columns: auto auto; /* Cambiado para dos columnas de ancho automático */
+  gap: 10px;
+}
+
+.item {
+  width: 100px;
+  height: 40px;
+
+  background: #48b87a;
+  border-radius: 8px;
+  padding: 5px;
+  box-sizing: border-box;
+  margin-bottom: 5px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dItem {
+  width: 370px;
+  height: 40px;
+  background: #f8faff;
+  border-radius: 8px;
+  padding: 5px;
+  box-sizing: border-box;
+  margin-bottom: 5px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
