--- a/my-react-task-list/src/styles/cardTask.css
+++ b/my-react-task-list/src/styles/cardTask.css
@@ -1,20 +1,22 @@
 .taskCard {
   width: 600px;
-  height: 220px;
   margin: 30px auto;
-  padding: 5px;
-  display: flex;
-  flex-direction: column;
+  padding: 15px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
   align-items: center;
   background: #bae8c3;
   box-shadow: 0px 0px 19px 0px #7c9c83;
   border-radius: 10px;
 }
 
-.columna {
-  display: grid;
-  grid-template-columns: auto auto; /* Cambiado para dos columnas de ancho automático */
-  gap: 10px;
+.columnaLeft,
+.columnaCenter,
+.columnaRight {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .item {
@@ -44,4 +46,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.deleteButton {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
