--- a/my-react-task-list/src/styles/cardTask.css
+++ b/my-react-task-list/src/styles/cardTask.css
@@ -6,9 +6,6 @@
   grid-template-columns: 1fr 1fr 1fr;
   gap: 10px;
   align-items: center;
-  background: #bae8c3;
-  box-shadow: 0px 0px 19px 0px #7c9c83;
-  border-radius: 10px;
 }
 
 .columnaLeft,
@@ -22,22 +19,15 @@
 .item {
   width: 100px;
   height: 40px;
-
-  background: #48b87a;
   border-radius: 8px;
   padding: 5px;
   box-sizing: border-box;
   margin-bottom: 5px;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .dItem {
-  width: 370px;
+  width: 420px;
   height: 40px;
-  background: #f8faff;
   border-radius: 8px;
   padding: 5px;
   box-sizing: border-box;
@@ -48,8 +38,28 @@
   align-items: center;
 }
 
-.deleteButton {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+.completed .item {
+  background: #48b87a;
+}
+
+.notCompleted .item {
+  background: #b84848;
+}
+
+.completed .dItem {
+  background: #f8faff;
+}
+
+.notCompleted .dItem {
+  background: #f8faff;
+}
+
+.completed {
+  background: #bae8c3;
+  box-shadow: 0px 0px 19px 0px #7c9c83;
+}
+
+.notCompleted {
+  background: #e8baba;
+  box-shadow: 0px 0px 19px 0px #9c7c7c;
 }
