--- a/my-react-task-list/src/styles/taskForm.css
+++ b/my-react-task-list/src/styles/taskForm.css
@@ -1,10 +1,10 @@
 .formCard {
-  width: 600px;
+  width: 500px;
   margin: 30px auto;
-  padding: 15px;
+  padding: 10px;
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  gap: 10px;
+  grid-template-columns: 2fr 3fr;
+  gap: 15px;
   align-items: center;
   background: #b7d2fc;
   border-radius: 8px;
@@ -12,22 +12,23 @@
 
 .label {
   width: 150px;
-  height: 50px;
+  height: 35px;
   background: #0e0a4d;
   border-radius: 8px;
   padding: 5px;
   box-sizing: border-box;
   margin-bottom: 5px;
+  text-align: center;
 }
 
 .formColumnLeft {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   box-sizing: border-box;
   padding: 5px;
   border-radius: 8px;
   margin-bottom: 5px;
+  align-items: center;
 }
 
 .formColumnRight {
@@ -40,8 +41,17 @@
   margin-bottom: 5px;
 }
 
-.buttonContainer {
-  margin-top: 10px;
-  display: flex;
-  justify-content: flex-end;
+.inputField {
+  width: 280px;
+  height: 22px;
+  margin-bottom: 5px;
+  border-radius: 8px;
+  padding: 5px;
+}
+
+.selectField {
+  width: 150px;
+  height: 30px;
+  margin-bottom: 5px;
+  border-radius: 8px;
 }
