--- a/my-react-task-list/src/styles/textFormsCard.css
+++ b/my-react-task-list/src/styles/textFormsCard.css
@@ -5,4 +5,23 @@
 .label {
   color: white;
   text-align: center;
+  font-size: 19px;
+  font-family: "comfortaa";
+  text-align: center;
+}
+
+.buttonCreate {
+  text-align: center;
+  font-size: 20px;
+  font-family: "comfortaa";
+  text-align: center;
+  font-weight: 100px;
+
+  color: white;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
