--- a/my-react-task-list/src/styles/stylesButtons/updateForm.css
+++ b/my-react-task-list/src/styles/stylesButtons/updateForm.css
@@ -10,6 +10,8 @@
   cursor: pointer;
   transition-duration: 0.3s;
   overflow: hidden;
+  margin-top: 5px;
+  margin-left: 120px;
 }
 
 .IconContainer {
