--- a/my-react-task-list/src/styles/stylesButtons/cancelForm.css
+++ b/my-react-task-list/src/styles/stylesButtons/cancelForm.css
@@ -11,6 +11,8 @@
   transition-duration: 0.3s;
   overflow: hidden;
   position: relative;
+  margin-top: 5px;
+  margin-right: 120px;
 }
 
 .cancelForm .iconCancel {
