--- a/my-react-task-list/src/styles/updateForm.css
+++ b/my-react-task-list/src/styles/updateForm.css
@@ -6,7 +6,7 @@
   gap: 15px;
   align-items: center;
   border-radius: 10px;
-  margin: 15px;
+  margin: 5px;
 }
 .formCardUpdate {
   width: 620px;
@@ -41,23 +41,26 @@
   align-items: center;
 }
 
-.columnRightUpdate {
-  width: 450px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  box-sizing: border-box;
-  padding: 5px;
+.columnRightUpdate .inputFieldUpdate {
+  width: 415px;
+  height: 30px;
   border-radius: 8px;
+  border: 2px solid hsl(236, 92%, 66%);
+  outline: none;
+  transition: 200ms ease-in;
+  padding-left: 1rem;
+  margin-bottom: 10px;
   margin-left: 15px;
 }
 
-.inputFieldUpdate {
-  width: 415px;
-  height: 23px;
-  margin-bottom: 10px;
-  border-radius: 8px;
-  padding: 5px;
+.columnRightUpdate .inputFieldUpdate:focus {
+  border-bottom: 4px solid hsl(236, 92%, 66%);
+  padding-top: 2px;
+}
+
+.columnRightUpdate .inputFieldUpdate::placeholder {
+  color: hsl(236, 92%, 66%);
+  opacity: 0.5;
 }
 
 .selectField {
@@ -73,6 +76,6 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-top: -10px;
+  margin-top: -20px;
   margin-bottom: -20px;
 }
